--- a/templates/default/netdev/netdevevents.html
+++ b/templates/default/netdev/netdevevents.html
@@ -1,5 +1,5 @@
 <!--// $Id$ //-->
-<table class="lmsbox lms-ui-sortable lms-ui-tab-container" id="netdevevents">
+<table class="lmsbox lms-ui-sortable lms-ui-tab-container" id="netdevevents" data-label='netdeveventspanel'>
     <thead>
         <tr class="hand lmsbox-titlebar" data-lmsbox-content="netdeveventspanel">
             <td class="bold">
@@ -29,11 +29,3 @@
         </tr>
     </tbody>
 </table>
-
-<script>
-
-    if (getCookie('netdeveventspanel') == '1') {
-        $('#netdeveventspanel').show();
-    }
-
-</script>
