--- a/templates/default/netdev/netdevevents.html
+++ b/templates/default/netdev/netdevevents.html
@@ -1,5 +1,5 @@
 <!--// $Id$ //-->
-<table class="lmsbox lms-ui-sortable lms-ui-tab-container" id="netdevevents" data-label='netdeveventspanel'>
+<table class="lmsbox lms-ui-sortable lms-ui-tab-container" id="netdevevents" data-label="netdeveventspanel">
     <thead>
         <tr class="hand lmsbox-titlebar" data-lmsbox-content="netdeveventspanel">
             <td class="bold">
