--- a/templates/default/net/netadd.html
+++ b/templates/default/net/netadd.html
@@ -35,7 +35,7 @@
 			<input type="text" size="23" name="netadd[address]" value="{$netadd.address}" required
 				{tip text="Enter IP address and select mask" trigger="address"}>
 			/
-			<select size="1" name="netadd[prefix]">
+			<select size="1" name="netadd[prefix]" {tip text='Choose prefix'}>
 				{section name=prefixlist loop=$prefixlist.id}
 					<option value="{$prefixlist.id[prefixlist]}"
 						{if $prefixlist.id[prefixlist] == $netadd.prefix} selected{/if}
