--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -135,7 +135,8 @@
 						</td>
 						<td>
 							<div class="valign-middle">
-								<input type="text" id="extid" class="lms-ui-autogrow" name="customerdata[extid]" value="{$customerinfo.extid|escape}"
+								<input type="hidden" name="customerdata[extids][0][serviceproviderid]" value="0">
+								<input type="text" id="extid" class="lms-ui-autogrow" name="customerdata[extids][0][extid]" value="{$customerinfo.extids[0].extid|escape}"
 									{tip trigger="extid"}>
 								{hint content="Enter customer identifier in external system (optional)"}
 							</div>
