improvement: added %document% symbol support in userpanel document commit notifications

--- a/userpanel/modules/documents/templates/setup.html
+++ b/userpanel/modules/documents/templates/setup.html
@@ -230,7 +230,8 @@
 							<br>
 							<strong>%cid%</strong> - customer identifier,<br>
 							<strong>%customername%</strong> - full customer name,<br>
-							<strong>%docid%</strong> - document identifier.
+							<strong>%docid%</strong> - document identifier,<br>
+							<strong>%document%</strong> - document number.
 						{/strip}{/capture}
 
 						{capture assign="recipient_hint"}{strip}
