--- a/templates/default/customer/customerassignmentinfoshort.html
+++ b/templates/default/customer/customerassignmentinfoshort.html
@@ -99,7 +99,7 @@
 				{elseif $assignment.invoice == $smarty.const.DOC_DNOTE}
 				{trans("debit note")}
 				{else}
-				{trans("no")}
+				{trans("without document")}
 				{/if}
 			</TD>
 		</TR>
