bugfix: escape smarty variable

--- a/templates/default/event/eventinfo.html
+++ b/templates/default/event/eventinfo.html
@@ -239,7 +239,7 @@
 				</td>
 				<td class="nobr">
 					<a href="?m=nodeinfo&id={$event.nodeid}">
-						{$event.node_name}: {$event.node_location|escape}
+						{$event.node_name|escape}: {$event.node_location|escape}
 					</a>
 				</td>
 			</tr>
