--- a/templates/default/netnode/netnodedevices.html
+++ b/templates/default/netnode/netnodedevices.html
@@ -21,10 +21,8 @@
 				{t a=$count}Assigned network devices ($a){/t}
 			</td>
 			<td class="text-right nobr">
-				<a href="#" id="new-net-dev" onclick="javascript:netDevForNetNodeChooseWin('{$objectid}')">
-					{trans("Add devices to node")}
-					{icon name="next"}
-				</a>
+				{button type='link' icon='add' id='new-net-dev' label='Add'
+					onclick="javascript:netDevForNetNodeChooseWin('{$objectid}')"}
 			</td>
 		</TR>
 	</thead>
