improvement: toggle visibility of nodes, netdevnodes in promotion schema selection box depending on selected location

--- a/css/less/multiselect.less
+++ b/css/less/multiselect.less
@@ -187,6 +187,9 @@
         &.active {
           background-color: @superdark;
         }
+        &:not(.visible) {
+          display: none;
+        }
         &.exclusive {
           font-weight: bold;
         }
