--- a/templates/default/customer/customerevents.html
+++ b/templates/default/customer/customerevents.html
@@ -11,6 +11,11 @@
 				$(this).val();
 		});
 
+		$('.clear-event-filter').click(function() {
+			location.href = '?m={$layout.module}&id={$objectid}&clear-event-filter=1'
+			return false;
+		});
+
 		$('#show-in-timetable').click(function() {
 			var from_date = $('[name="customer-events-from-date"]').val();
 			if (from_date != '') {
@@ -36,6 +41,7 @@
 			{trans("From")}&nbsp;<INPUT type="text" name="customer-events-from-date" size="10" maxlength="10" placeholder="{trans("yyyy/mm/dd")}"
 				{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means 1970/01/01) or click to choose it from calendar"}
 				value="{$events_from_date}">
+			{button type="link" class="clear-event-filter" icon="delete" href="#" tip="Clear filter"}
 		{/tab_header_cell}
 		{tab_header_cell}
 			<A href="?m=eventadd&customerid={$customerinfo.id}">{trans("New Event")} &raquo;</A>
