--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -245,9 +245,10 @@
 			{/box_row}
 
 			{box_row icon="queue" label="Queue" icon_class="fa-fw"}
-				<select size="1" name="ticket[queue]"
+				<select size="1" name="ticket[queue]" required
 						{tip class="lms-ui-advanced-select" text="Select queue" trigger="queue"}
 						onchange="xajax_queue_changed($(this).val(), $('#rtverifiers select').val())">
+					{if !$default_queue_web}<option value="" {if empty($queue)}selected{/if}>{trans("— Select queue —")}</option>{/if}
 					{foreach $queuelist as $item}
 						<option value="{$item.id}"
 							{if $item.newticketsubject && $item.newticketbody || $item.newticketsmsbody} data-newticket-notify="1"{/if}
