bugfix: ticket source was not translatable in rtticketinfobox

--- a/templates/default/rt/rtticketinfobox.html
+++ b/templates/default/rt/rtticketinfobox.html
@@ -228,7 +228,7 @@
 									{icon name="source" label="Ticket source"}
 								</TD>
 								<TD>
-									{$_RT_SOURCES[$ticket.source]}
+									{trans($_RT_SOURCES[$ticket.source])}
 								</TD>
 							</TR>
 							{/if}
