enhancement: customer search by popular assignment properties (disable accounting day input field depending on 'last day of month' checkbox state

--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -792,6 +792,10 @@
 		$('#assignment-period').change(function() {
 			$('#last-day-of-month').prop('disabled', parseInt($(this).val()) != {$smarty.const.MONTHLY});
 		});
+
+		$('#last-day-of-month').change(function() {
+			$('#a-day-of-month').prop('disabled', $(this).prop('checked'));
+		});
 	});
 
 </script>
