improvement: check if any email addresses or phone numbers were selected if respective notification options are checked (bugfix: disable check in group action mode)

--- a/templates/default/rt/rtmessageadd.html
+++ b/templates/default/rt/rtmessageadd.html
@@ -416,6 +416,7 @@
 			$('[name="message[body]"]').val(message);
 		});
 
+		{if !$group_action}
 		$('#message-form').submit(function() {
 			var errorMessages = [];
 			var errorElem = null;
@@ -433,6 +434,7 @@
 				return false;
 			}
 		});
+		{/if}
 
 		{if isset($citing)}
 		var textarea = $('[name="message[body]"]');
