improvement: some invoice item visibility depends on invoice pay type

--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -376,8 +376,8 @@
 													</td>
 													<td>
 														{assign var=paytype value=$customerinfo.paytype}
-														{if $_PAYTYPES.$paytype}
-															{trans($_PAYTYPES.$paytype)}
+														{if isset($_PAYTYPES[$paytype])}
+															{trans($_PAYTYPES[$paytype].label)}
 														{else}
 															{trans("default")}
 														{/if}
