--- a/templates/default/invoice/invoiceedit.html
+++ b/templates/default/invoice/invoiceedit.html
@@ -119,8 +119,8 @@
 				</td>
 				<td class="nobr">
 					<select name="invoice[paytype]" {tip text="Select payment type" trigger="paytype"}>
-						{foreach $_PAYTYPES as $key => $item}
-							<option value="{$key}"{if $invoice.paytype==$key} selected{/if}>{trans($item)}</option>
+						{foreach Localisation::arraySort(Utils::array_column($_PAYTYPES, 'label')) as $key => $item}
+							<option value="{$key}"{if $invoice.paytype == $key} selected{/if}>{trans($item.label)}</option>
 						{/foreach}
 					</select>
 				</td>
