--- a/templates/default/division/divisionadd.html
+++ b/templates/default/division/divisionadd.html
@@ -316,7 +316,7 @@
 				<select name="division[inv_paytype]" {tip text="Select default invoices payment type" trigger="paytype"}>
 					<option value=""{if !$division.inv_paytype} selected{/if}>— {trans("default")} —</option>
 					{foreach $_PAYTYPES as $key => $item}
-						<option value="{$key}"{if $division.inv_paytype == $key} selected{/if}>{trans($item)}</option>
+						<option value="{$key}"{if $division.inv_paytype == $key} selected{/if}>{trans($item.label)}</option>
 					{/foreach}
 				</select>
 			</td>
