--- a/templates/default/customer/customerdocuments.html
+++ b/templates/default/customer/customerdocuments.html
@@ -140,7 +140,7 @@
 							{$docattach = $doc.attachments[0]}
 							{if $docattach.type == 1 || count($doc.attachments) == 1}
 								{documentview id="{$doc.docid}-{$docattach.id}" type=$docattach.contenttype name=$docattach.filename
-								url="?m=documentview&id={$doc.docid}" external=true
+								url="?m=documentview&id={$doc.docid}&attachments=1" external=true
 								text="<i class=\"lms-ui-icon-view{if preg_match('/pdf/',$docattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$docattach.contenttype)} xls{/if}\"></i>"}
 							{/if}
 							{if count($doc.attachments) > 1 || !$docattach.type < 1}
