--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -285,7 +285,7 @@
 				{/if}
 				{if $docattach.type == 1 || $doc.attachments|size == 1}
 					{documentview id="{$doc.docid}-{$docattach.id}" type=$docattach.contenttype name=$docattach.filename
-						url="?m=documentview&id={$doc.docid}" external=true
+						url="?m=documentview&id={$doc.docid}&attachments=1" external=true
 						text="<i class=\"lms-ui-icon-view{if preg_match('/pdf/',$docattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$docattach.contenttype)} xls{/if}\"></i>"
 						tip="Preview"}
 				{/if}
