--- a/templates/default/invoice/invoice.html
+++ b/templates/default/invoice/invoice.html
@@ -66,16 +66,18 @@
 					{trans("Sale date:")}
 					<br>
 				{/if}
-				{if ($_PAYTYPES[$invoice.paytype].features & smarty.const.INVOICE_FEATURE_DEADLINE) > 0}
-					{if $use_alert_color}
-						<span style="color: red; font-weight: bold;">
-					{/if}
-					{trans("Deadline:")}
-					{if $use_alert_color}
-						</span>
-					{/if}
-					<br>
+				{if $use_alert_color}
+					<span style="color: red; font-weight: bold;">
 				{/if}
+				{if ($_PAYTYPES[$invoice.paytype].features & smarty.const.INVOICE_FEATURE_DEADLINE) > 0}
+					{trans("Deadline:")}
+				{else}
+					{trans("Payment Cleared")}
+				{if}
+				{if $use_alert_color}
+					</span>
+				{/if}
+				<br>
 				{if !ConfigHelper::checkConfig('invoices.hide_payment_type')}
 					{trans("Payment type:")}
 				{/if}
@@ -90,14 +92,18 @@
 					{$invoice.sdate|date_format:"Y-m-d"}
 					<br>
 				{/if}
-				{if $use_alert_color}
-					<span style="color: red; font-weight: bold;">
+				{if ($_PAYTYPES[$invoice.paytype].features & smarty.const.INVOICE_FEATURE_DEADLINE) > 0}
+					{if $use_alert_color}
+						<span style="color: red; font-weight: bold;">
+					{/if}
+					{$invoice.pdate|date_format:"Y-m-d"}
+					{if $use_alert_color}
+						</span>
+					{/if}
+				{else}
+					&nbsp;
 				{/if}
-				{$invoice.pdate|date_format:"Y-m-d"}
 				<br>
-				{if $use_alert_color}
-					</span>
-				{/if}
 				{if !ConfigHelper::checkConfig('invoices.hide_payment_type')}
 					{trans($invoice.paytypename)}
 					{if !empty($invoice.splitpayment)}
