improvement: document html/pdf attachments are merged before printing in document add form (customer documents box/panel)

--- a/css/templates/customer/customerdocuments.less
+++ b/css/templates/customer/customerdocuments.less
@@ -94,4 +94,15 @@
 			}
 		}
 	}
+
+	.lms-ui-tab-button-panel:nth-child(n+3) {
+		border-top: 0;
+		.lms-ui-tab-buttons > * {
+			margin-top: 0.1em;
+		}
+	}
+
+	.lms-ui-tab-button-panel:not(:last-child) .lms-ui-tab-buttons > * {
+		margin-bottom: 0.1em;
+	}
 }
