--- a/templates/default/customer/customerdocuments.html
+++ b/templates/default/customer/customerdocuments.html
@@ -1,5 +1,7 @@
 <!--// $Id$ //-->
 
+{$default_with_attachments = ConfigHelper::checkConfig('documents.default_with_attachments')}
+
 {css}
 {js}
 
@@ -139,9 +141,10 @@
 						{if is_array($doc.attachments)}
 							{$docattach = $doc.attachments[0]}
 							{if $docattach.type == 1 || count($doc.attachments) == 1}
+								{capture assign="url"}?m=documentview&id={$doc.docid}{if $default_with_attachments}&attachments=1{/if}{/capture}
 								{documentview id="{$doc.docid}-{$docattach.id}" type=$docattach.contenttype name=$docattach.filename
-								url="?m=documentview&id={$doc.docid}&attachments=1" external=true
-								text="<i class=\"lms-ui-icon-view{if preg_match('/pdf/',$docattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$docattach.contenttype)} xls{/if}\"></i>"}
+									url=$url external=true
+									text="<i class=\"lms-ui-icon-view{if preg_match('/pdf/',$docattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$docattach.contenttype)} xls{/if}\"></i>"}
 							{/if}
 							{if count($doc.attachments) > 1 || !$docattach.type < 1}
 								<a href="#" id="allattachments-toggle-{$doc.docid}" onclick="toggle_all_attachments({$doc.docid}); return false;" title="{trans("more document attachments")}">
