--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -4,6 +4,8 @@
 <!--// $Id$ //-->
 <H1>{$layout.pagetitle}</H1>
 
+{$default_with_attachments = ConfigHelper::checkConfig('documents.default_with_attachments')}
+
 <style>
 
 	#usertype {
@@ -284,8 +286,9 @@
 					{button type="link" icon="edit" href="?m=documentedit&id={$doc.docid}" tip="Edit"}
 				{/if}
 				{if $docattach.type == 1 || $doc.attachments|size == 1}
+					{capture assign="url"}?m=documentview&id={$doc.docid}{if $default_with_attachments}&attachments=1{/if}{/capture}
 					{documentview id="{$doc.docid}-{$docattach.id}" type=$docattach.contenttype name=$docattach.filename
-						url="?m=documentview&id={$doc.docid}&attachments=1" external=true
+						url=$url external=true
 						text="<i class=\"lms-ui-icon-view{if preg_match('/pdf/',$docattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$docattach.contenttype)} xls{/if}\"></i>"
 						tip="Preview"}
 				{/if}
