--- a/templates/default/customer/customerdocuments.html
+++ b/templates/default/customer/customerdocuments.html
@@ -1,6 +1,6 @@
 <!--// $Id$ //-->
 
-{$default_with_attachments = ConfigHelper::checkConfig('documents.default_with_attachments')}
+{$default_all_attachments = ConfigHelper::checkConfig('documents.default_all_attachments')}
 
 {css}
 {js}
@@ -141,7 +141,7 @@
 						{if is_array($doc.attachments)}
 							{$docattach = $doc.attachments[0]}
 							{if $docattach.type == 1 || count($doc.attachments) == 1}
-								{capture assign="url"}?m=documentview&id={$doc.docid}{if $default_with_attachments}&attachments=1{/if}{/capture}
+								{capture assign="url"}?m=documentview&id={$doc.docid}{if $default_all_attachments}&attachments=1{/if}{/capture}
 								{documentview id="{$doc.docid}-{$docattach.id}" type=$docattach.contenttype name=$docattach.filename
 									url=$url external=true
 									text="<i class=\"lms-ui-icon-view{if preg_match('/pdf/',$docattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$docattach.contenttype)} xls{/if}\"></i>"}
