--- a/templates/default/balance/balancenew.html
+++ b/templates/default/balance/balancenew.html
@@ -36,6 +36,9 @@
 
 </style>
 
+{$default_taxrate = ConfigHelper::getConfig('phpui.default_taxrate')}
+{$default_taxlabel = ConfigHelper::getConfig('phpui.default_taxlabel')}
+
 <H1>{$layout.pagetitle}</H1>
 
 <form name="addbalance" id="addbalance" method="POST" action="?m=balanceadd">
@@ -114,7 +117,10 @@
 							<select size="1" name="addbalance[taxid]" {tip text="Select Tax rate"}
 								form="addbalance">
 								{foreach $taxeslist as $tax}
-									<option value="{$tax.id}"{if ($taxid && $tax.id == $taxid) || (!$taxid && $tax.value == ConfigHelper::getConfig('phpui.default_taxrate'))} selected{/if}
+									<option value="{$tax.id}"
+										{if $taxid && $tax.id == $taxid || !$taxid
+											&& (isset($default_taxlabel) && $tax.label == $default_taxlabel
+											|| !isset($default_taxlabel) && $tax.value == $default_taxrate)} selected{/if}
 										>{$tax.label}</option>
 								{/foreach}
 							</select>
