--- a/templates/default/invoice/invoiceedit.html
+++ b/templates/default/invoice/invoiceedit.html
@@ -21,7 +21,8 @@
 </script>
 
 {$default_printpage = ConfigHelper::getConfig('invoices.default_printpage')}
-{$default_taxrate   = ConfigHelper::getConfig('phpui.default_taxrate')}
+{$default_taxrate = ConfigHelper::getConfig('phpui.default_taxrate')}
+{$default_taxlabel = ConfigHelper::getConfig('phpui.default_taxlabel')}
 
 <form name="setcustomer" id="setcustomer" method="POST" action="?m=invoiceedit&action=setcustomer">
 	<input type="submit" class="hiddenbtn">
