--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -32,6 +32,7 @@
 	</style>
 
 	{$default_taxrate = ConfigHelper::getConfig('phpui.default_taxrate')}
+	{$default_taxlabel = ConfigHelper::getConfig('phpui.default_taxlabel')}
 
 	<h1>{$layout.pagetitle}</h1>
 
@@ -186,7 +187,10 @@
 											<td>
 												<select size="1" id="tax" name="tariff[taxid]" {tip text="Select Tax rate" trigger="taxid"}{if empty($taxeslist)} required{/if}>
 													{foreach $taxeslist as $tax}
-														<option value="{$tax.id}"{if $tax.value == $default_taxrate || $tax.id == $tariff.taxid} selected{/if}>{$tax.label}</option>
+														<option value="{$tax.id}"
+															{if !$tariff.taxid && (isset($default_taxlabel) && $tax.label == $default_taxlabel
+																|| !isset($default_taxlabel) && $tax.value == $default_taxrate)
+																|| $tariff.taxid && $tax.id == $tariff.taxid} selected{/if}>{$tax.label}</option>
 													{foreachelse}
 														<option value="">{trans("— no tax rates defined —")}</option>
 													{/foreach}
